Create functions  (#3)
* Z1| Add GetById and Delete swagger annotations

* Z1| Fix update annotation swagger

* Z1| Swagger documentation

* Z1| Swagger documentation

* Z1| logging setup

* Z1| project refactor

* Z1| new table and refactoring

* Z1| add authorization

* Z1| init migration

* Z1| migration settings

* Z1| migration all done

* Z1| auth and jwt init

* Z1| jwt token parsing

* Z1| jwt token parsing all done

* Z1| fix getAll cars

* Z1| client handler

* Z1| fix get cars and clients

* Z1| get cars and clients all done
